Update CODEOWNERS to include @djfarrelly as a co-owner for README.md

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -7,5 +7,5 @@ values.yaml @AndyInternet
 .github/ @AndyInternet
 
 # Documentation
-README.md @AndyInternet
+README.md @AndyInternet @djfarrelly
 CLAUDE.md @AndyInternet
