--- a/.github/workflows/helm-lint.yml
+++ b/.github/workflows/helm-lint.yml
@@ -82,8 +82,31 @@ jobs:
             --set inngest.signingKey=1234abc \
             > rendered-templates.yaml
 
-          # Run kubesec scan
-          kubesec scan rendered-templates.yaml
+          # Run kubesec scan and handle exit codes properly
+          echo "Running kubesec security scan..."
+          if kubesec scan rendered-templates.yaml > kubesec-results.json; then
+            echo "✓ Security scan completed successfully"
+          else
+            # kubesec returns exit code 2 for advisory recommendations, which is not an error
+            exit_code=$?
+            if [ $exit_code -eq 2 ]; then
+              echo "✓ Security scan completed with advisory recommendations"
+            else
+              echo "❌ Security scan failed with exit code $exit_code"
+              exit $exit_code
+            fi
+          fi
+          
+          # Display results
+          cat kubesec-results.json
+          
+          # Check for critical security failures (score 0 for deployments indicates problems)
+          if grep -q '"message": "Failed' kubesec-results.json; then
+            echo "❌ Critical security issues found"
+            exit 1
+          else
+            echo "✓ No critical security issues detected"
+          fi
 
       - name: Check Security Contexts
         run: |
