Add scheduling constraints for redis and pg

--- a/values.yaml
+++ b/values.yaml
@@ -168,6 +168,11 @@ postgresql:
     accessModes:
       - ReadWriteOnce # Access mode for the volume
 
+  # Node scheduling constraints for PostgreSQL pods
+  nodeSelector: {}
+  tolerations: []
+  affinity: {}
+
 # Internal Redis cache configuration
 # Set enabled: false to use external Redis (configure inngest.redis.uri)
 redis:
@@ -196,6 +201,11 @@ redis:
     storageClass: "" # Storage class (uses default if empty)
     accessModes:
       - ReadWriteOnce # Access mode for the volume
+
+  # Node scheduling constraints for Redis pods
+  nodeSelector: {}
+  tolerations: []
+  affinity: {}
 
 # KEDA autoscaling configuration
 # Uses Prometheus sidecar to scrape Inngest metrics for scaling decisions
