--- a/templates/postgresql-deployment.yaml
+++ b/templates/postgresql-deployment.yaml
@@ -140,4 +140,16 @@ spec:
           emptyDir: {}
         - name: var-run-postgresql
           emptyDir: {}
+      {{- with .Values.postgresql.nodeSelector }}
+      nodeSelector:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.postgresql.affinity }}
+      affinity:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.postgresql.tolerations }}
+      tolerations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
 {{- end }}
