--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -33,6 +33,12 @@ spec:
       {{- end }}
       labels:
         {{- include "inngest.selectorLabels" . | nindent 8 }}
+        {{- with .Values.podLabels }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.commonLabels }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
