--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -39,6 +39,9 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       serviceAccountName: {{ include "inngest.serviceAccountName" . }}
+      {{- if .Values.terminationGracePeriodSeconds }}
+      terminationGracePeriodSeconds: {{ .Values.terminationGracePeriodSeconds }}
+      {{- end }}
       # Pod-level security context - runs as non-root user for security
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
