--- a/templates/postgresql-secret.yaml
+++ b/templates/postgresql-secret.yaml
@@ -17,8 +17,7 @@ metadata:
   name: {{ include "inngest.postgresql.fullname" . }}
   namespace: {{ .Values.namespace.name }}
   labels:
-    {{- include "inngest.labels" . | nindent 4 }}
-    app.kubernetes.io/component: postgresql
+    {{- include "inngest.postgresql.labels" . | nindent 4 }}
 type: Opaque
 data:
   # Individual database credentials (base64 encoded)
