--- a/templates/postgresql-serviceaccount.yaml
+++ b/templates/postgresql-serviceaccount.yaml
@@ -11,8 +11,7 @@ metadata:
   name: {{ include "inngest.postgresql.fullname" . }}
   namespace: {{ .Values.namespace.name }}
   labels:
-    {{- include "inngest.labels" . | nindent 4 }}
-    app.kubernetes.io/component: postgresql
+    {{- include "inngest.postgresql.labels" . | nindent 4 }}
   annotations:
     # Security: Explicitly document that this service account has no special permissions
     security.inngest.com/permissions: "minimal"
