--- a/templates/redis-serviceaccount.yaml
+++ b/templates/redis-serviceaccount.yaml
@@ -11,8 +11,7 @@ metadata:
   name: {{ include "inngest.redis.fullname" . }}
   namespace: {{ .Values.namespace.name }}
   labels:
-    {{- include "inngest.labels" . | nindent 4 }}
-    app.kubernetes.io/component: redis
+    {{- include "inngest.redis.labels" . | nindent 4 }}
   annotations:
     # Security: Explicitly document that this service account has no special permissions
     security.inngest.com/permissions: "minimal"
