--- a/templates/serviceaccount.yaml
+++ b/templates/serviceaccount.yaml
@@ -18,7 +18,7 @@ metadata:
   name: {{ include "inngest.serviceAccountName" . }}
   namespace: {{ .Values.namespace.name }}
   labels:
-    {{- include "inngest.labels" . | nindent 4 }}
+    {{- include "inngest.server.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   # Custom annotations (e.g., for cloud provider IAM role bindings)
   annotations:
