--- a/templates/redis-deployment.yaml
+++ b/templates/redis-deployment.yaml
@@ -20,21 +20,18 @@ metadata:
   name: {{ include "inngest.redis.fullname" . }}
   namespace: {{ .Values.namespace.name }}
   labels:
-    {{- include "inngest.labels" . | nindent 4 }}
-    app.kubernetes.io/component: redis
+    {{- include "inngest.redis.labels" . | nindent 4 }}
 spec:
   # Single replica deployment - not suitable for production HA
   # Use external Redis cluster for production workloads
   replicas: 1
   selector:
     matchLabels:
-      {{- include "inngest.selectorLabels" . | nindent 6 }}
-      app.kubernetes.io/component: redis
+      {{- include "inngest.redis.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       labels:
-        {{- include "inngest.selectorLabels" . | nindent 8 }}
-        app.kubernetes.io/component: redis
+        {{- include "inngest.redis.selectorLabels" . | nindent 8 }}
     spec:
       # Security: Use dedicated service account with minimal permissions
       serviceAccountName: {{ include "inngest.redis.fullname" . }}
