--- a/templates/redis-pvc.yaml
+++ b/templates/redis-pvc.yaml
@@ -19,8 +19,7 @@ metadata:
   name: {{ include "inngest.redis.fullname" . }}
   namespace: {{ .Values.namespace.name }}
   labels:
-    {{- include "inngest.labels" . | nindent 4 }}
-    app.kubernetes.io/component: redis
+    {{- include "inngest.redis.labels" . | nindent 4 }}
 spec:
   # Access modes define how the volume can be mounted
   accessModes:
