--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -84,7 +84,7 @@ spec:
             httpGet:
               path: /health
               port: http
-            initialDelaySeconds: 5
+            initialDelaySeconds: {{ .Values.readinessProbe.initialDelaySeconds }}
             periodSeconds: 5
             timeoutSeconds: 3
             failureThreshold: 3
